@@ -932,7 +932,7 @@ class Operations(pyfuse3.Operations):
             and (self.failsafe or self.inodes[id_].locked)):
             raise FUSEError(errno.EPERM)
 
-        return id_
+        return pyfuse3.FileInfo(fh=id_, keep_cache=True)
 
     async def access(self, id_, mode, ctx):
         '''Check if requesting process has `mode` rights on `inode`.
@@ -962,7 +962,7 @@ class Operations(pyfuse3.Operations):
             inode = self.inodes[id_]
 
         self.open_inodes[inode.id] += 1
-        return (inode.id, inode.entry_attributes())
+        return (pyfuse3.FileInfo(fh=inode.id), inode.entry_attributes())
 
     def _create(self, id_p, name, mode, ctx, rdev=0, size=0):
         if name == CTRL_NAME:
