@@ -1,3 +1,8 @@
+UNRELEASED CHANGES
+
+  * S3QL now requires version 3.x rather than 1.x of the pyfuse3 module.
+
+
 2020-05-08, S3QL 3.4.1
 
   * Fixed mount.s3ql "NoneType can't be used in 'await' expression" crash.
